# multi-binaryalign

./: .gitignore  README.md  environment.yml  mplm.py  multi-binaryalign.md  pyproject.toml
configs/: test.yml  test_binary.yml  train.yml  train_binary.yml
datasets/: data.md  prepare.py
datasets/en-fr/Hansards/: README.trial
datasets/processed/: manifest.json
datasets/processed/en-cz/: czenali.jsonl
datasets/processed/en-es/: es_golden.jsonl
datasets/processed/en-fr/: fr_golden.jsonl  hansards.jsonl
datasets/processed/en-hi/: hindi.jsonl
datasets/processed/en-ja/: kftt.jsonl
datasets/processed/en-pt/: pt_golden.jsonl
datasets/processed/en-ro/: romanian.jsonl
datasets/processed/en-sv/: swedish.jsonl
datasets/processed/train/: manifest.json
datasets/processed/valid/: manifest.json
runs/model_1/training/: config.yml
scripts/: test.sh  test_binary.sh  train.sh  train_binary.sh
scripts/misc/: compute_pos_weight.sh  debug_masks.sh
src/binaryalign/: test.py  train.py
src/binaryalign.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/binaryalign/data/: collate.py  dataset.py
src/binaryalign/inference/: align.py
src/binaryalign/models/: backbone.py  classifier.py  model.py
src/binaryalign/tokenization/: __init__.py  tokenizer.py
src/multi_binaryalign/: compute_pos_weight.py  debug_masks.py  test_binary.py  train_binary.py
src/multi_binaryalign.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wandb/: latest-run
wandb/run-20260105_024508-9qs3w66b/: run-9qs3w66b.wandb
(+973 files in other folders)
