[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-binaryalign"
version = "0.1.0"
description = "Improved one-to-many alignment adaptation of BinaryAlign."
readme = "README.md"
license = "MIT"

dependencies = [
    "numpy",
    "tqdm",
    "omegaconf",
    "transformers",
    "tokenizers",
    "safetensors",
    "sentencepiece",
    "protobuf",
    "spacy==3.8.0",
    "wandb",
]

[tool.setuptools.packages.find]
where = ["src"]